manifesto/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
spec:
  type: ClusterIP
  selector:
    app: foo-app
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: bar-service
spec:
  type: ClusterIP
  selector:
    app: bar-app
  ports:
    - port: 8080
      targetPort: 8080
